test/functions/deitz/iterators/test_override5_error.good
test_override5_error.chpl:2: error: conflicting return type specified for 'C.foo(n: int): int'
test_override5_error.chpl:9: error:   overridden by 'D.foo(n: int): (int,int)'
